# device-notifier-app

./: Cargo.toml  LICENSE  README.md
agent/src/: commands.rs  config.rs  discord.rs  events.rs  main.rs  security.rs  storage.rs  system.rs
discord-bot/: env.example  package.json
discord-bot/src/: index.ts
docs/: DEVELOPMENT.md  INSTALLATION.md
gui/: package.json  tauri.conf.json
installers/: BUILD_SUMMARY.md  README.md
installers/cross-platform/: GITHUB_PREREQS_SETUP.md  README.md  build-wizard.bat  build-wizard.ps1  setup-github-prereqs-simple.ps1  setup-github-prereqs.ps1  setup-wizard.iss
installers/windows/: Documents - Shortcut.lnk  build-msi.bat  build-msi.ps1  installer.wxs
scripts/: build-all-installers.sh  build-docker.sh  build-installers.sh  make-executable.bat
tests/: unit_tests.rs
